add error validation

--- a/custom_components/timesince/manifest.json
+++ b/custom_components/timesince/manifest.json
@@ -6,5 +6,6 @@
   "requirements": [],
   "dependencies": [],
   "codeowners": ["@nishithdev"],
-  "config_flow": true
+  "config_flow": true,
+  "translations": "translations"
 }
